# pairwriter.nvim

./: LICENSE  README.md
doc/: pairwriter.txt
lua/: pairwriter.lua
pairwriter_helper/: Cargo.toml
pairwriter_helper/src/: lib.rs
pairwriter_helper/src/client/: export_functions.rs  hooks.rs  mod.rs
pairwriter_helper/src/server/: exported_functions.rs  hooks.rs  mod.rs
plugin/: pairwriter.lua
