[package]
name = "pairwriter_helper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
pairwriter= { git = "https://github.com/m10090/PairWriter" , rev="2e0ee24183509e415a356cd46d1068171a6b2a60"}
mlua = { version = "0.9.9", features = ["lua51", "module", "async"] }
tokio = "1.40.0"
